crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_file_preview.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 453
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 AgentWatch   repo:routa-js  branch:main    FILES VIEW · FOLLOW ON  rpc:socket  ag:2 act:1  dirty:2  unknown:1  synced 2
┌Agents──────────────────────┐┌Files───────────────────────────────────────────┐┌File Preview──────────────────────────┐
│2 total  1 active  1 idle  2││ ALL FILES    REVIEW UNKNOWN                    ││ 1 fn render(frame: &mut Frame) {     │
│                            ││2 files  M:1 D:1  E:1 I:0 U:1                   ││ 2     // preview                     │
│4211 ◈ Codex  ACTIVE        ││────────────────────────────────────────────────││ 3 }                                  │
│cpu  2.5%  mem 128MB  up    ││> tui.rs                                        ││                                      │
│01:35                       ││  crates/agentwatch/src  M  +38 -5     4m  EXACT││                                      │
│proj project  conf 80%      ││  route.ts                                      ││                                      │
│                            ││  src/app/api/a2a/card  D  -12        5m  UNKNOW││                                      │
│9001 ◆ Claude  IDLE         ││                                                ││                                      │
│cpu  0.1%  mem 96MB  up     ││                                                ││                                      │
│<ts>                    ││                                                ││                                      │
│proj elsewhere  conf 80%    │└────────────────────────────────────────────────┘│                                      │
│                            │┌Details─────────────────────────────────────────┐│                                      │
│                            ││tui.rs                                          ││                                      │
│                            ││crates/agentwatch/src                           ││                                      │
│                            ││Last by: impl-buddy                             ││                                      │
└────────────────────────────┘└────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌Event Stream (all)────────────────────────────────────────────────────────────────────────────────────────────────────┐
│<ts>  WATCH  modify   crates/agentwatch/src/tui.rs                                                                │
│<ts>  HOOK   live-hook-check Edit Write                                                                           │
│<ts>  GIT    post-commit main                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
