crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_search.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 441
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 AgentWatch   repo:routa-js  branch:main    FILES VIEW · FOLLOW ON  rpc:socket  ag:2 act:1  dirty:1  unknown:1  synced 2
┌Files───────────────────────────────────────────────────────────────┐┌Details─────────────────────────────────────────┐
│ ALL FILES    REVIEW UNKNOWN                                        ││route.ts                                        │
│1 files  M:0 D:1  E:0 I:0 U:1                                       ││src/app/api/a2a/card                            │
│────────────────────────────────────────────────────────────────────││Last by: unknown                                │
│> route.ts                                                          ││Modified: <ts> (5m)                         │
│  src/app/api/a2a/card  D  -12        5m  UNKNOWN                   │└────────────────────────────────────────────────┘
│                                                                    │┌Diff Preview────────────────────────────────────┐
│                                                                    ││@@ -1,2 +1,3 @@                                 │
│                                                                    ││-use old                                        │
│                                                                    ││+use new                                        │
│                                                                    ││+use cache                                      │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
└────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌Event Stream (all)────────────────────────────────────────────────────────────────────────────────────────────────────┐
│<ts>  WATCH  modify   crates/agentwatch/src/tui.rs                                                                │
│<ts>  HOOK   live-hook-check Edit Write                                                                           │
│<ts>  GIT    post-commit main                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
